SIUnitExpressionParser.output
State 2 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 12 conflicts: 2 shift/reduce
State 37 conflicts: 3 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: expression

    2 expression: term_list
    3           | INTEGER
    4           | INTEGER '/' term_list
    5           | INTEGER '/' '(' term_list ')'
    6           | term_list '/' term_list
    7           | expression '/' unit_term
    8           | expression '/' '(' term_list ')'
    9           | '(' expression ')' '^' INTEGER
   10           | '(' expression ')' '^' DECIMAL
   11           | '(' expression ')' '^' '(' INTEGER ')'
   12           | '(' expression ')'

   13 term_list: unit_term
   14          | term_list '*' unit_term
   15          | term_list '*' '(' term_list ')'
   16          | '(' term_list ')'
   17          | '(' term_list ')' '^' INTEGER
   18          | '(' term_list ')' '^' DECIMAL

   19 unit_term: UNIT_SYMBOL
   20          | UNIT_SYMBOL '^' INTEGER
   21          | UNIT_SYMBOL '^' '(' INTEGER ')'
   22          | UNKNOWN_SYMBOL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 8 9 10 11 12 15 16 17 18 21
')' (41) 5 8 9 10 11 12 15 16 17 18 21
'*' (42) 14 15
'/' (47) 4 5 6 7 8
'^' (94) 9 10 11 17 18 20 21
error (256)
UNIT_SYMBOL (258) 19 20 21
INTEGER (259) 3 4 5 9 11 17 20 21
DECIMAL (260) 10 18
UNKNOWN_SYMBOL (261) 22


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
input (13)
    on left: 1, on right: 0
expression (14)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1 7 8 9 10 11 12
term_list (15)
    on left: 13 14 15 16 17 18, on right: 2 4 5 6 8 14 15 16 17 18
unit_term (16)
    on left: 19 20 21 22, on right: 7 13 14


state 0

    0 $accept: . input $end

    UNIT_SYMBOL     shift, and go to state 1
    INTEGER         shift, and go to state 2
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 4

    input       go to state 5
    expression  go to state 6
    term_list   go to state 7
    unit_term   go to state 8


state 1

   19 unit_term: UNIT_SYMBOL .
   20          | UNIT_SYMBOL . '^' INTEGER
   21          | UNIT_SYMBOL . '^' '(' INTEGER ')'

    '^'  shift, and go to state 9

    $default  reduce using rule 19 (unit_term)


state 2

    3 expression: INTEGER .
    4           | INTEGER . '/' term_list
    5           | INTEGER . '/' '(' term_list ')'

    '/'  shift, and go to state 10

    '/'       [reduce using rule 3 (expression)]
    $default  reduce using rule 3 (expression)


state 3

   22 unit_term: UNKNOWN_SYMBOL .

    $default  reduce using rule 22 (unit_term)


state 4

    9 expression: '(' . expression ')' '^' INTEGER
   10           | '(' . expression ')' '^' DECIMAL
   11           | '(' . expression ')' '^' '(' INTEGER ')'
   12           | '(' . expression ')'
   16 term_list: '(' . term_list ')'
   17          | '(' . term_list ')' '^' INTEGER
   18          | '(' . term_list ')' '^' DECIMAL

    UNIT_SYMBOL     shift, and go to state 1
    INTEGER         shift, and go to state 2
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 4

    expression  go to state 11
    term_list   go to state 12
    unit_term   go to state 8


state 5

    0 $accept: input . $end

    $end  shift, and go to state 13


state 6

    1 input: expression .
    7 expression: expression . '/' unit_term
    8           | expression . '/' '(' term_list ')'

    '/'  shift, and go to state 14

    $default  reduce using rule 1 (input)


state 7

    2 expression: term_list .
    6           | term_list . '/' term_list
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    '/'       [reduce using rule 2 (expression)]
    $default  reduce using rule 2 (expression)


state 8

   13 term_list: unit_term .

    $default  reduce using rule 13 (term_list)


state 9

   20 unit_term: UNIT_SYMBOL '^' . INTEGER
   21          | UNIT_SYMBOL '^' . '(' INTEGER ')'

    INTEGER  shift, and go to state 17
    '('      shift, and go to state 18


state 10

    4 expression: INTEGER '/' . term_list
    5           | INTEGER '/' . '(' term_list ')'

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 19

    term_list  go to state 20
    unit_term  go to state 8


state 11

    7 expression: expression . '/' unit_term
    8           | expression . '/' '(' term_list ')'
    9           | '(' expression . ')' '^' INTEGER
   10           | '(' expression . ')' '^' DECIMAL
   11           | '(' expression . ')' '^' '(' INTEGER ')'
   12           | '(' expression . ')'

    '/'  shift, and go to state 14
    ')'  shift, and go to state 21


state 12

    2 expression: term_list .
    6           | term_list . '/' term_list
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'
   16          | '(' term_list . ')'
   17          | '(' term_list . ')' '^' INTEGER
   18          | '(' term_list . ')' '^' DECIMAL

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ')'  shift, and go to state 22

    '/'  [reduce using rule 2 (expression)]
    ')'  [reduce using rule 2 (expression)]


state 13

    0 $accept: input $end .

    $default  accept


state 14

    7 expression: expression '/' . unit_term
    8           | expression '/' . '(' term_list ')'

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 23

    unit_term  go to state 24


state 15

   14 term_list: term_list '*' . unit_term
   15          | term_list '*' . '(' term_list ')'

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 25

    unit_term  go to state 26


state 16

    6 expression: term_list '/' . term_list

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 27

    term_list  go to state 28
    unit_term  go to state 8


state 17

   20 unit_term: UNIT_SYMBOL '^' INTEGER .

    $default  reduce using rule 20 (unit_term)


state 18

   21 unit_term: UNIT_SYMBOL '^' '(' . INTEGER ')'

    INTEGER  shift, and go to state 29


state 19

    5 expression: INTEGER '/' '(' . term_list ')'
   16 term_list: '(' . term_list ')'
   17          | '(' . term_list ')' '^' INTEGER
   18          | '(' . term_list ')' '^' DECIMAL

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 27

    term_list  go to state 30
    unit_term  go to state 8


state 20

    4 expression: INTEGER '/' term_list .
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'

    '*'  shift, and go to state 15

    $default  reduce using rule 4 (expression)


state 21

    9 expression: '(' expression ')' . '^' INTEGER
   10           | '(' expression ')' . '^' DECIMAL
   11           | '(' expression ')' . '^' '(' INTEGER ')'
   12           | '(' expression ')' .

    '^'  shift, and go to state 31

    $default  reduce using rule 12 (expression)


state 22

   16 term_list: '(' term_list ')' .
   17          | '(' term_list ')' . '^' INTEGER
   18          | '(' term_list ')' . '^' DECIMAL

    '^'  shift, and go to state 32

    $default  reduce using rule 16 (term_list)


state 23

    8 expression: expression '/' '(' . term_list ')'

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 27

    term_list  go to state 33
    unit_term  go to state 8


state 24

    7 expression: expression '/' unit_term .

    $default  reduce using rule 7 (expression)


state 25

   15 term_list: term_list '*' '(' . term_list ')'

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 27

    term_list  go to state 34
    unit_term  go to state 8


state 26

   14 term_list: term_list '*' unit_term .

    $default  reduce using rule 14 (term_list)


state 27

   16 term_list: '(' . term_list ')'
   17          | '(' . term_list ')' '^' INTEGER
   18          | '(' . term_list ')' '^' DECIMAL

    UNIT_SYMBOL     shift, and go to state 1
    UNKNOWN_SYMBOL  shift, and go to state 3
    '('             shift, and go to state 27

    term_list  go to state 35
    unit_term  go to state 8


state 28

    6 expression: term_list '/' term_list .
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'

    '*'  shift, and go to state 15

    $default  reduce using rule 6 (expression)


state 29

   21 unit_term: UNIT_SYMBOL '^' '(' INTEGER . ')'

    ')'  shift, and go to state 36


state 30

    5 expression: INTEGER '/' '(' term_list . ')'
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'
   16          | '(' term_list . ')'
   17          | '(' term_list . ')' '^' INTEGER
   18          | '(' term_list . ')' '^' DECIMAL

    '*'  shift, and go to state 15
    ')'  shift, and go to state 37


state 31

    9 expression: '(' expression ')' '^' . INTEGER
   10           | '(' expression ')' '^' . DECIMAL
   11           | '(' expression ')' '^' . '(' INTEGER ')'

    INTEGER  shift, and go to state 38
    DECIMAL  shift, and go to state 39
    '('      shift, and go to state 40


state 32

   17 term_list: '(' term_list ')' '^' . INTEGER
   18          | '(' term_list ')' '^' . DECIMAL

    INTEGER  shift, and go to state 41
    DECIMAL  shift, and go to state 42


state 33

    8 expression: expression '/' '(' term_list . ')'
   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'

    '*'  shift, and go to state 15
    ')'  shift, and go to state 43


state 34

   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'
   15          | term_list '*' '(' term_list . ')'

    '*'  shift, and go to state 15
    ')'  shift, and go to state 44


state 35

   14 term_list: term_list . '*' unit_term
   15          | term_list . '*' '(' term_list ')'
   16          | '(' term_list . ')'
   17          | '(' term_list . ')' '^' INTEGER
   18          | '(' term_list . ')' '^' DECIMAL

    '*'  shift, and go to state 15
    ')'  shift, and go to state 22


state 36

   21 unit_term: UNIT_SYMBOL '^' '(' INTEGER ')' .

    $default  reduce using rule 21 (unit_term)


state 37

    5 expression: INTEGER '/' '(' term_list ')' .
   16 term_list: '(' term_list ')' .
   17          | '(' term_list ')' . '^' INTEGER
   18          | '(' term_list ')' . '^' DECIMAL

    '^'  shift, and go to state 32

    $end      reduce using rule 5 (expression)
    $end      [reduce using rule 16 (term_list)]
    '*'       reduce using rule 16 (term_list)
    '/'       reduce using rule 5 (expression)
    '/'       [reduce using rule 16 (term_list)]
    ')'       reduce using rule 5 (expression)
    ')'       [reduce using rule 16 (term_list)]
    $default  reduce using rule 5 (expression)


state 38

    9 expression: '(' expression ')' '^' INTEGER .

    $default  reduce using rule 9 (expression)


state 39

   10 expression: '(' expression ')' '^' DECIMAL .

    $default  reduce using rule 10 (expression)


state 40

   11 expression: '(' expression ')' '^' '(' . INTEGER ')'

    INTEGER  shift, and go to state 45


state 41

   17 term_list: '(' term_list ')' '^' INTEGER .

    $default  reduce using rule 17 (term_list)


state 42

   18 term_list: '(' term_list ')' '^' DECIMAL .

    $default  reduce using rule 18 (term_list)


state 43

    8 expression: expression '/' '(' term_list ')' .

    $default  reduce using rule 8 (expression)


state 44

   15 term_list: term_list '*' '(' term_list ')' .

    $default  reduce using rule 15 (term_list)


state 45

   11 expression: '(' expression ')' '^' '(' INTEGER . ')'

    ')'  shift, and go to state 46


state 46

   11 expression: '(' expression ')' '^' '(' INTEGER ')' .

    $default  reduce using rule 11 (expression)
